--- a/index.html
+++ b/index.html
@@ -3,16 +3,52 @@
 <head>
 	<title>촬영 및 도안</title>
 </head>
+<style>
+	header{width:600px; margin:auto; height:130px; margin-top:65px;}
+	section{margin:auto; width:600px; text-align:center;}
+	h1{text-align:center; background-color:#FFF8AF; color:#506AAB;}
+	h3{font-weight:normal; line-height:18px;}
+
+	.line{border-bottom:1px dotted black; margin:auto; margin-top:20px; margin-bottom:20px; width:600px;}
+
+</style>
 <body>
-	<header style = "width:600px; margin:auto; height:130px; margin-top:65px;" >
+	<header>
 		<div style = "width:550px; margin:auto; height:50px; background-color:#FFF8AF;
 						font-size:12px; text-align:center; line-height:50px;">
 			상세페이지 도안 및 촬영사진입니다.
 		</div>
 	</header>
-		<div style = "margin:auto; width:600px; ">
+	<section>
 		<img src = "draft.jpg" >
+		<div class = line></div>
+			<h1 >리뷰</h1>
+		<div class = line></div>
+			<img src = "DSC01463_00_00.jpg" style ="width:500px;">
+			<h3>item
+			<p>고심하여 고른 것들인데, 정말 유용하게 잘 쓰일만한 것들이 왔다.</p>
+			<p>내가 너무 쓰고 싶어져서 곧바로 스튜디오를 예약하고</p>
+			<p>포장을 거칠게(?) 뜯은 후, 사진을 찍었다.</p></h3>
+			<img src = "DSC01569_00_00.jpg" style ="width:500px;">
+			<h3>Closeup shot
+			<p>마스킹 테이프만 따로 다이소에서 패킹되어 있는걸로 샀고,.</p>
+			<p>개중 색이 어울리는 몇 개만 골라서 썼다. </p></h3>
+			<img src = "DSC01577_00_00.jpg" style ="width:500px;">
+			<h3>Closeup shot
+			<p>아무리 봐도 귀엽다.</p></h3>
+			<img src = "DSC01464_00_00.jpg" style ="width:500px;">
+			<h3>Full shot
+			<p>재료들만 나열해서 찍어봤다. </p>
+			<img src = "DSC01548_00_00.jpg" style ="width:500px;">
+			<h3>directed shot
+			<p>메인 이미지가 필요할 것 같아 스티커를 여기저기 붙이고 </p>
+			<p>널브러트리는 등 연출하여 찍고난 후,</p> 
+			<p>재밌어서 상단에 상세페이지도 만들어봤다. </p></h3>
+
+
+
 		</div>
+	</section>
 	<footer style = "width:600px; margin:auto;  height:130px; margin-top:65px;">
 		<div style = "width:450px; margin:auto; height:50px; background-color:#FFF8AF;
 						font-size:12px; text-align:center; line-height:50px; ">
